Docs: Add details about Outreachy general funding
Add a snippet that explains who is eligible to be fully funded by the
Outreachy general fund.

Add details about how Outreachy organizers decide to allocate general
funding.

Move details about the parts of the internship stipend to a FAQ entry at
the end.

--- a/home/templates/home/community_participation_rules.html
+++ b/home/templates/home/community_participation_rules.html
@@ -11,11 +11,7 @@ Community participation rules
 
 <h3>1. Intern funding</h3>
 
-<p>All participating communities must provide funding for at least one intern ($6,500 USD). The only exception to this rule is communities who are approved for Outreachy general funding.</p>
-
-{% comment %}Point coordinators to resources for finding and pitching to sponsors, once the community guide exists.{% endcomment %}
-
-<p>Humanitarian open source communities can apply to the Outreachy general fund. For approved humanitarian open source communities, Outreachy will fully fund at least 1 intern. We especially encourage applications involving climate change, infectious diseases, and mental health, as these are the greatest challenges humanity faces today.</p>
+{% include 'home/snippet/funding_short_description.html' %}
 
 <h3>2. Community coordinator</h3>
 
