--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -23,6 +23,14 @@ Community Guide | Outreachy Documentation
 		</ul>
 	</li>
 	<li><a href='#participation-rules'>Community participation rules</a></li>
+	<li><a href="#outreachy-general-fund">Outreachy general fund</a>
+		<ul>
+			<li><a href='#funding-during-cfp'>Outreachy general fund: All intern funding</a></li>
+			<li><a href='#partial-general-funding'>Outreachy general fund: Additional intern funding</a></li>
+			<li><a href='#general-funding-stats'>How much does the Outreachy general fund sponsor?</a></li>
+			<li><a href='#general-funding-decision-making'>How do you decide who gets Outreachy general funding?</a></li>
+		</ul>
+	</li>
 	<li><a href='#project-guidelines'>Internship project guidelines</a></li>
 	<li><a href='#outreachy-schedule'>Outreachy schedule</a>
 		<ul>
@@ -37,6 +45,11 @@ Community Guide | Outreachy Documentation
 	</li>
 	<li><a href="#contribution-evaluation">Evaluating contributions</a></li>
 	<li><a href="#estimated-number-of-interns">Estimated number of interns</a></li>
+	<li><a href="#faq">FAQ</a>
+		<ul>
+			<li><a href='#stipend-details'>Internship stipend details</a></li>
+		</ul>
+	</li>
 </ol>
 
 <hr>
@@ -108,9 +121,7 @@ Community Guide | Outreachy Documentation
 
 <p><u>Funding Requirements</u></p>
 
-<p>Communities need to have secured funding for at least one intern ($6,500). The only exception to this rule is humanitarian open source communities who have been approved for Outreachy general funding.</p>
-
-<p>The $6,500 USD intern sponsorship covers the $5,500 internship stipend, the $500 intern conference travel stipend, and a $500 accounting fee. The accounting fee covers Outreachy's fiscal non-profit parent organization, Software Freedom Conservancy, handle sponsor invoicing, intern payments, W-9 collection, visa request letters, employment verification letters, student internship credit letters, and tax questions.</p>
+{% include 'home/snippet/funding_short_description.html' %}
 
 <p><u>Licensing Requirements</u></p>
 {% include "home/snippet/license-requirements.html" %}
@@ -128,6 +139,66 @@ Community Guide | Outreachy Documentation
 <p>All work done by Outreachy interns should be public and done out in the open on public channels connected with the community.</p>
 
 <p id="mentor">Outreachy intern projects will need to meet <a href="/mentor/mentor-faq/#define-a-project">additional Outreachy intern project requirements</a>.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h2 id='outreachy-general-fund'><a href='#outreachy-general-fund'>3. Outreachy General fund</a></h2>
+
+<p>Communities can apply to the Outreachy general fund to sponsor interns. There are two ways to apply for Outreachy general funding:</p>
+
+<ol>
+	<li>Fully funding all interns from the Outreachy general fund</li>
+	<li>Funding some interns from the Outreachy general fund</li>
+</ol>
+
+<p><b>Humanitarian communities</b> are eligible for interns to be fully funded by the Outreachy general fund.</p>
+
+<p><b>Non-humanitarian communities</b> must secure their own funding for at least one intern ($6,500 USD). After that external funding is secured, they can apply for additional interns to be funded by the Outreachy general fund.</p>
+
+<h3 id='all-general-funding'><a href='#funding-during-cfp'>3.1 Outreachy general fund: All intern funding</a></h3>
+
+<p>Humanitarian open source communities are invited to apply to the Outreachy general fund when first signing up to participate in Outreachy. If your community is approved, Outreachy will fully fund at least one intern. Outreachy is especially interested in funding humanitarian communities involving climate change, infectious diseases, and mental health.</p>
+
+<p>Non-humanitarian open source communities are not eligible for this option.</p>
+
+<h3 id='partial-general-funding'><a href='#partial-general-funding'>3.2 Outreachy general fund: Additional intern funding</a></h3>
+
+<p>Communities can apply to receive additional funding for interns from the Outreachy general fund. Both humanitarian and non-humanitarian can apply for additional funding from the Outreachy general fund. However, non-humanitarian open source communities must first have secured their own funding for at least one intern.</p>
+
+<p>During the intern selection process, communities can request additional interns be sponsored by the Outreachy general fund. Outreachy will review general funding requests across all communities, and determine which ones we have budget to sponsor.</p>
+
+<p>Communities can request that an intern be funded by the Outreachy general fund through the Outreachy website. When a mentor selects an intern, the coordinator can set the funding source to the Outreachy general fund.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h3 id='general-funding-stats'><a href='#general-funding-stats'>3.3 How much does the Outreachy general fund sponsor?</a></h3>
+
+<p>The sponsorship for each Outreachy intern is $6,500 USD. The Outreachy general fund typically sponsors 5 to 10 interns per cohort. The Outreachy general fund usually sponsors 1 intern per community, but it has occasionally sponsored up to 3 interns per community.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h3 id='general-funding-decision-making'><a href='#general-funding-decision-making'>3.4 How do you decide who gets Outreachy general funding?</a></h3>
+
+<p>The Outreachy organizers review Outreachy general funding requests after the intern selection deadline. We review Outreachy general funding requests across all communities. Then we apply our criteria to determine which communities get funding.</p>
+
+<p><b>Intern free time</b> We first look at the amount of time each intern has free. We review the time commitments the intern put in their initial application. We review the intern's final application to ensure they do not have new time commitments.</p>
+
+<p>If an intern has close to the minimum required free time during the internship period, we look at the quality of their contributions. If an intern has not a lot of free time and has made lower quality contributions, they are not a good fit to be accepted. If an intern has not a lot of free time, but has higher quality and complex contributions, they can be accepted as an intern.</p>
+
+<p><b>Contribution quality</b> Second, we look at the quality of the contributions made by the intern.</p>
+
+<p>If the intern has made simple contributions, it's unclear whether they have the skills to be successful during the internship. We may ask the mentor how they have evaluated the intern's skills.</p>
+
+<p>Interns who are rated 1 ("Struggling - applicant did not understand instructions or feedback") or 2 ("Inexperienced - smaller contributions that vary in quality") are not good candidates for Outreachy general funding.</p>
+
+<p>If the mentor has rated the intern as a 3 or lower ("Good - some smaller contributions of good quality"), we may have a discussion with the mentor about their evaluation of the intern's skills.</p>
+
+<p>Interns who are rated 4 ("Strong - at least one large, high-quality contribution") or 5 ("Amazing - multiple large, high-quality contributions") will be prioritized for Outreachy general funding.</p>
+
+<p><b>Alternative sponsors</b> Outreachy needs to carefully allocate its funding. If a community already has a sponsor that is a for-profit company or a 501c6 (non-profit trade organization), we may reach out to that sponsor to see if they can fund additional interns.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
@@ -658,4 +729,14 @@ On the page with project details, you should see a link to
 
 <p>Applicants are encouraged to read the <a href='{% url 'docs-internship' %}'>Internship Guide</a>. The Internship Guide talks about what we expect from interns. It also talks about what interns can expect of mentors and what to expect in terms of career development opportunities.</p>
 
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+<h2 id='faq'><a href='#faq'>FAQ</a></h2>
+
+<h2 id='stipend-details'><a href='#stipend-details'>Internship stipend details</a></h2>
+
+<p>The $6,500 USD intern sponsorship covers the $5,500 internship stipend, the $500 intern conference travel stipend, and a $500 accounting fee. The accounting fee covers Outreachy's fiscal non-profit parent organization, Software Freedom Conservancy, handle sponsor invoicing, intern payments, W-9 collection, visa request letters, employment verification letters, student internship credit letters, and tax questions.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
 {% endblock %}
