Modify short summary of coordinator and mentor requirements for communities

--- a/home/templates/home/community_participation_rules.html
+++ b/home/templates/home/community_participation_rules.html
@@ -15,11 +15,13 @@ Community participation rules
 
 <h3>2. Community coordinator</h3>
 
-<p>Each community must have a coordinator, who is an interface between Outreachy organizers and mentors. <a href="https://www.outreachy.org/mentor/#coordinator">Read about community coordinator duties</a>.</p>
+<p>Each community must have a coordinator. A community coordinator is an interface between Outreachy organizers and mentors. <a href="https://www.outreachy.org/mentor/#coordinator">Read about community coordinator duties</a>.</p>
 
 <h3>3. Mentors</h3>
 
-<p>Each community needs to have at least one mentor. The mentor must be willing to volunteer at least 5 hours a week during the internship period, and 5-10 hours per week during the application period. <a href="https://www.outreachy.org/mentor/#mentor">Read about mentor duties</a></p>
+<p>Each community needs to have at least one mentor. A mentor works directly with Outreachy applicants and their intern. Having more than one person mentor an intern ("co-mentoring") is encouraged.</p>
+
+<p>Mentors must be willing to volunteer at least 5 hours a week during the internship period, and 5-10 hours per week during the application period. <a href="https://www.outreachy.org/mentor/#mentor">Read about mentor duties</a></p>
 
 <h3>4. Projects</h3>
 
