Docs: Make linked sections for community participation rules
Also add more details to some of the sections. Rearrange rules into
sections that make more sense.

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -22,7 +22,15 @@ Community Guide | Outreachy Documentation
 			<li><a href='#program-differences'>How is Outreachy different from other internship programs?</a></li>
 		</ul>
 	</li>
-	<li><a href='#participation-rules'>Community participation rules</a></li>
+	<li><a href='#participation-rules'>Community participation rules</a>
+		<ul>
+			<li><a href='#funding-requirements'>2.1 Funding requirements</a></li>
+			<li><a href='#licensing-requirements'>2.2 Licensing requirements</a></li>
+			<li><a href='#commercial-ties'>2.3 Commercial ties</a></li>
+			<li><a href='#community-guidelines'>2.4 Community guidelines</a></li>
+			<li><a href='#public-work-requirements'>2.5 Public work requirements</a></li>
+		</ul>
+	</li>
 	<li><a href="#outreachy-general-fund">Outreachy general fund</a>
 		<ul>
 			<li><a href='#funding-during-cfp'>Outreachy general fund: All intern funding</a></li>
@@ -119,26 +127,58 @@ Community Guide | Outreachy Documentation
 
 <h2 id='participation-rules'><a href='#participation-rules'>2. Community participation rules</a></h2>
 
-<p><u>Funding Requirements</u></p>
+<p>New communities must meet these rules to be eligible to participate in Outreachy. The Outreachy organizers and the Outreachy Project Leadership Committee (PLC) will review the community's application to ensure they meet our participation rules.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h3 id='funding-requirements'><a href='#funding-requirements'>2.1 Funding requirements</a></h3>
 
 {% include 'home/snippet/funding_short_description.html' %}
 
-<p><u>Licensing Requirements</u></p>
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h3 id='licensing-requirements'><a href='#licensing-requirements'>2.2 Licensing requirements</a></h3>
+
 {% include "home/snippet/license-requirements.html" %}
 
-<p><u>Community Requirements</u></p>
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h3 id='commercial-ties'><a href='#commercial-ties'>2.3 Commercial ties</a></h3>
 
 <p>Free and open source communities that participate in Outreachy must forward free and open source software in public interest.</p>
 
-<p>While we encourage companies to provide internship opportunities to people from underrepresented groups, the program cannot be used for internal company internships. Participating free software communities can't be too tightly tied to any one company. Experienced community contributors should be employed by multiple organizations or be volunteers. The community resources should not advertise services of only just one company related to the software the community produces.</p>
+<p>While we encourage companies to provide internship opportunities to people from underrepresented groups, the program cannot be used for internal company internships.</p>
+
+<p>Participating free software communities can't be too tightly tied to any one company. Experienced community contributors should be employed by multiple organizations or be volunteers. The community resources should not advertise services of only just one company related to the software the community produces. Community governance should include multiple companies or volunteers.</p>
+
+<p>There should be no difference in functionality between the free and paid versions of the open source project. Outreachy does not allow open source projects which use a non-FSF approved license to restrict the rights of users of the free version of the project.</p>
+
+<p>We do allow communities that provide paid hosting services. However, pricing pages should put the free community-hosted version at the same prominence as commercial hosting prices.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h3 id='community-guidelines'><a href='#community-guidelines'>2.4 Community guidelines</a></h3>
+
+<p>All free software communities that participate in Outreachy need to be well-established. Core team members (either paid or volunteer) should be regularly contributing to the community.</p>
+
+<p>Outreachy interns benefit from working with a variety of community members who can help review their work and answer questions.</p>
+
+<p>We encourage communities with more than 5 core contributors to participate. However, this is not a strict requirement.</p>
 
 <p>Non-profit 501(c)(3) charities and 501(c)(6) trade organizations of any size offering free software projects are welcome to participate as a mentoring community.</p>
 
-<p>All free software communities that participate in Outreachy need to be well-established, with core team members (either paid or volunteer) who regularly contribute to the community. Outreachy interns benefit from working with a variety of community members who can help review their work and answer questions.</p>
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
 
-<p>All work done by Outreachy interns should be public and done out in the open on public channels connected with the community.</p>
+<h3 id='public-work-requirements'><a href='#public-work-requirements'>2.5 Public work requirements</a></h3>
 
-<p id="mentor">Outreachy intern projects will need to meet <a href="/mentor/mentor-faq/#define-a-project">additional Outreachy intern project requirements</a>.</p>
+<p>All work done by Outreachy interns should be public. While interns may communicate with their mentors privately, mentors should encourage interns to communicate on public community channels as much as possible.</p>
+
+<p>Community communication channels (chats or forums) should be public. It is fine for community chat channels to be invite-only in order to discourage spammers.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
