--- a/home/templates/home/snippet/generic_timeline.html
+++ b/home/templates/home/snippet/generic_timeline.html
@@ -6,29 +6,34 @@
 		<th>End of year Internships</th>
 	</tr>
 	<tr>
+		<td>Call for mentoring communities opens</td>
+		<td>early January</td>
+		<td>early August</td>
+	</tr>
+	<tr>
 		<td>Initial applications open</td>
-		<td>late January</td>
+		<td>early February</td>
 		<td>late August</td>
 	</tr>
 	<tr>
 		<td>Initial applications due</td>
 		<td>end of February</td>
-		<td>end of September</td>
+		<td>early September</td>
 	</tr>
 	<tr>
 		<td>Contribution period opens</td>
-		<td>March</td>
-		<td>October</td>
+		<td>mid March</td>
+		<td>early October</td>
 	</tr>
 	<tr>
-		<td>Final application and contributions due</td>
-		<td>April</td>
-		<td>November</td>
+		<td>Contribution period ends</td>
+		<td>mid April</td>
+		<td>end of October</td>
 	</tr>
 	<tr>
 		<td>Interns announced</td>
-		<td>May</td>
-		<td>November</td>
+		<td>mid May</td>
+		<td>late November</td>
 	</tr>
 	<tr>
 		<td>Internships start</td>
