--- a/home/templates/home/newcommunity_form.html
+++ b/home/templates/home/newcommunity_form.html
@@ -8,32 +8,10 @@ Community participation application
 
 <h1>Community participation application</h1>
 
+<p>The information on this page will be reviewed by Outreachy organizers and the Outreachy Project Leadership Committee.</p>
+
 {% include "home/snippet/privacy_policy.html" %}
 
-<h2>Community Sign Up Process</h2>
-<p>
-The first step for Free and Open Source Software (FOSS) communities who want to participate Outreachy is to provide information about your community.
-The Outreachy organizers will review your community information and you will receive an email once your community is approved to participate in this internship round.
-</p>
-
-<p>
-The second step (completed on the next page) will be to fill out information about your participation in this round, such as number of interns funded and billing information.
-</p>
-
-<h2>Mentor and Volunteer Sign Up Process</h2>
-<p>
-Once you have completed both forms, you will be redirected to your community's call for volunteers page.
-You can send that page link to your community's mentors to get them to submit their project descriptions.
-</p>
-
-<p>
-Mentors should sign up on the Outreachy website, since that grants them special permissions.
-Mentors who sign up will be can be subscribed to the mentors mailing list, which the Outreachy organizers use to send important announcements.
-Mentors will be granted read access to applications for their project and will be notified of new applicants.
-</p>
-
-<h2>Community Information</h2>
-<hr>
 <form action="" method="post">
 	{% csrf_token %}
 	{{ form.media }}
