--- a/home/templates/home/newcommunity_form.html
+++ b/home/templates/home/newcommunity_form.html
@@ -17,29 +17,36 @@ Community participation application
 	{{ form.media }}
 	{{ form.non_field_errors }}
 	{% for field in form.visible_fields %}
-		{% if 'other mentorship programs' in field.label_tag %}
-			<h2>Mentor Experience Assessment</h2>
+		{% if 'Community name' in field.label_tag %}
+			<h2>1. Community information</h2>
+			<hr>
+		{% elif 'other mentorship programs' in field.label_tag %}
+			<h2>2. Mentor Experience Assessment</h2>
 			<hr>
 		{% elif 'Approved license' in field.label_tag %}
-			<h2>License Assessment</h2>
+			<h2>3. License Assessment</h2>
 			<hr>
 		{% elif "Contributor License Agreement" in field.label_tag %}
-			<h3>Optional License Info</h3>
+			<h3>3.1 Optional License Info</h3>
 			<hr>
 		{% elif 'What different organizations and companies participate in this FOSS community' in field.label_tag %}
-			<h2>Commercial Ties Assessment</h2>
+			<h2>4. Commercial Ties Assessment</h2>
 			<hr>
 		{% elif '(Optional) Company advertisements on community resources' in field.label_tag %}
-			<h3>Optional Commercial Ties Info</h3>
+			<h3>4.1 Optional Commercial Ties Info</h3>
 			<hr>
 		{% elif '(Optional) Community governance model' in field.label_tag %}
-			<h3>Community Governance</h3>
+			<h3>4.2 Community Governance</h3>
 			<hr>
 		{% elif 'Code of Conduct URL' in field.label_tag %}
-			<h3>Code of Conduct</h3>
+			<h2>5. Diversity and Inclusion</h2>
+			<h3>5.1 Code of Conduct</h3>
 			<hr>
 		{% elif 'demographics' in field.label_tag %}
-			<h3>Community Diversity and Inclusion</h3>
+			<h3>5.2 Community Demographics</h3>
+			<hr>
+		{% elif 'inclusive' in field.label_tag %}
+			<h3>5.3 Community Inclusion Efforts</h3>
 			<hr>
 		{% endif %}
 		<div class="form-group card">
