Docs: Add details about corporate sponsorship of communities

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -31,12 +31,18 @@ Community Guide | Outreachy Documentation
 			<li><a href='#public-work-requirements'>2.5 Public work requirements</a></li>
 		</ul>
 	</li>
-	<li><a href="#outreachy-general-fund">Outreachy general fund</a>
+	<li><a href='#intern-funding'>Intern Funding</a>
 		<ul>
-			<li><a href='#funding-during-cfp'>Outreachy general fund: All intern funding</a></li>
-			<li><a href='#partial-general-funding'>Outreachy general fund: Additional intern funding</a></li>
-			<li><a href='#general-funding-stats'>How much does the Outreachy general fund sponsor?</a></li>
-			<li><a href='#general-funding-decision-making'>How do you decide who gets Outreachy general funding?</a></li>
+			<li><a href='#intern-funding'>Finding sponsors</a></li>
+			<li><a href='#community-credits'>Community internship stipend credits</a></li>
+			<li><a href="#outreachy-general-fund">Outreachy general fund</a>
+				<ul>
+					<li><a href='#funding-during-cfp'>Outreachy general fund: All intern funding</a></li>
+					<li><a href='#partial-general-funding'>Outreachy general fund: Additional intern funding</a></li>
+					<li><a href='#general-funding-stats'>How much does the Outreachy general fund sponsor?</a></li>
+					<li><a href='#general-funding-decision-making'>How do you decide who gets Outreachy general funding?</a></li>
+				</ul>
+			</li>
 		</ul>
 	</li>
 	<li><a href='#project-guidelines'>Internship project guidelines</a></li>
@@ -185,7 +191,31 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='outreachy-general-fund'><a href='#outreachy-general-fund'>3. Outreachy General fund</a></h2>
+<h2 id='intern-funding'><a href='#intern-funding'>3. Intern Funding</a></h2>
+
+{% include 'home/snippet/funding_short_description.html' %}
+
+<p>Funding for interns may come from a number of different sources. Communities are welcome to apply to participate if their sponsorship is not confirmed yet. Sponsorship information can be updated at any time until the intern selection deadline.</p>
+
+<h3 id='intern-funding'><a href='#intern-funding'>3.1 Finding sponsors</a></h3>
+
+<p>FOSS communities often fund Outreachy interns directly from their own community funds, or by using funds from the foundation or non-profit who is their fiscal sponsor.</p>
+
+<p>Many FOSS communities find funding from corporate sponsors who use their FOSS project.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h3 id='community-credits'><a href='#community-credits'>3.2 Community internship stipend credits</a></h3>
+
+<p>Some Outreachy communities may have a full or partial internship stipend credit. A credit usually occurs when a community has arranged for a company to sponsor them, the company has paid the sponsorship invoice, but the community ends up accepting less interns than the amount the company sponsored. In rare cases, a community may have a partial internship credit when an internship is terminated, and either the midpoint or final internship stipend was not paid.</p>
+
+<p>Community internship credits are valid for two years from the time the credit was recorded. It can be used towards interns sponsorship in future Outreachy internship rounds. If a community does not use the credit within two years, the credit revert to the Outreachy general fund.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h3 id='outreachy-general-fund'><a href='#outreachy-general-fund'>3.3 Outreachy General fund</a></h3>
 
 <p>Communities can apply to the Outreachy general fund to sponsor interns. There are two ways to apply for Outreachy general funding:</p>
 
@@ -198,13 +228,13 @@ Community Guide | Outreachy Documentation
 
 <p><b>Non-humanitarian communities</b> must secure their own funding for at least one intern ($6,500 USD). After that external funding is secured, they can apply for additional interns to be funded by the Outreachy general fund.</p>
 
-<h3 id='all-general-funding'><a href='#funding-during-cfp'>3.1 Outreachy general fund: All intern funding</a></h3>
+<h3 id='all-general-funding'><a href='#funding-during-cfp'>3.3.1 Outreachy general fund: All intern funding</a></h3>
 
 <p>Humanitarian open source communities are invited to apply to the Outreachy general fund when first signing up to participate in Outreachy. If your community is approved, Outreachy will fully fund at least one intern. Outreachy is especially interested in funding humanitarian communities involving climate change, infectious diseases, and mental health.</p>
 
 <p>Non-humanitarian open source communities are not eligible for this option.</p>
 
-<h3 id='partial-general-funding'><a href='#partial-general-funding'>3.2 Outreachy general fund: Additional intern funding</a></h3>
+<h3 id='partial-general-funding'><a href='#partial-general-funding'>3.3.2 Outreachy general fund: Additional intern funding</a></h3>
 
 <p>Communities can apply to receive additional funding for interns from the Outreachy general fund. Both humanitarian and non-humanitarian can apply for additional funding from the Outreachy general fund. However, non-humanitarian open source communities must first have secured their own funding for at least one intern.</p>
 
@@ -215,14 +245,14 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h3 id='general-funding-stats'><a href='#general-funding-stats'>3.3 How much does the Outreachy general fund sponsor?</a></h3>
+<h3 id='general-funding-stats'><a href='#general-funding-stats'>3.3.3 How much does the Outreachy general fund sponsor?</a></h3>
 
 <p>The sponsorship for each Outreachy intern is $6,500 USD. The Outreachy general fund typically sponsors 5 to 10 interns per cohort. The Outreachy general fund usually sponsors 1 intern per community, but it has occasionally sponsored up to 3 interns per community.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h3 id='general-funding-decision-making'><a href='#general-funding-decision-making'>3.4 How do you decide who gets Outreachy general funding?</a></h3>
+<h3 id='general-funding-decision-making'><a href='#general-funding-decision-making'>3.3.4 How do you decide who gets Outreachy general funding?</a></h3>
 
 <p>The Outreachy organizers review Outreachy general funding requests after the intern selection deadline. We review Outreachy general funding requests across all communities. Then we apply our criteria to determine which communities get funding.</p>
 
@@ -245,7 +275,7 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='project-guidelines'><a href='#project-guidelines'>3. Internship project guidelines</a></h2>
+<h2 id='project-guidelines'><a href='#project-guidelines'>4. Internship project guidelines</a></h2>
 
 <p>What makes a good Outreachy internship project? (Credit to QEMU coordinator Stefan Hajnoczi's <a href="https://www.youtube.com/watch?v=xNVCX7YMUL8">talk at KVM Forum</a> for these tips.) A project that is suitable for interns to work on is:</p>
 <ul>
@@ -258,23 +288,23 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='outreachy-schedule'><a href='#outreachy-schedule'>4. Outreachy schedule</a></h2>
+<h2 id='outreachy-schedule'><a href='#outreachy-schedule'>5. Outreachy schedule</a></h2>
 
 <p>Outreachy internships run twice a year.</p>
 
-<h3 id='general-timeline'><a href='#general-timeline'>4.1 General timeline</a></h3>
+<h3 id='general-timeline'><a href='#general-timeline'>5.1 General timeline</a></h3>
 
 <p>Here is our general schedule for each year:</p>
 
 {% include 'home/snippet/generic_timeline.html' %}
 
-<h3 id='current-timeline'><a href='#current-timeline'>4.2 Current internship round schedule</a></h3>
+<h3 id='current-timeline'><a href='#current-timeline'>5.2 Current internship round schedule</a></h3>
 
 <p><b>{{ current_round.official_name }} round schedule</b></p>
 
 {% include 'home/snippet/mentor-timeline.html' %}
 
-<h3 id='timeline-details'><a href='#timeline-details'>4.3 Timeline details</a></h3>
+<h3 id='timeline-details'><a href='#timeline-details'>5.3 Timeline details</a></h3>
 
 <p>The internship round begins when the Outreachy organizers open the call for participation communities. The community CFP period somewhat overlaps with the initial application period.<p>
 
@@ -329,7 +359,7 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='community-sign-up-process'><a href="#community-sign-up-process">5. Community sign up process</a></h2>
+<h2 id='community-sign-up-process'><a href="#community-sign-up-process">6. Community sign up process</a></h2>
 
 <p>The first step for Free and Open Source Software (FOSS) communities who want to participate Outreachy is to <a href="{% url 'community-cfp' %}">fill out a community participation application.</a> Outreachy organizers and the Outreachy Project Leadership Committee will review your community participation application.</p>
 
@@ -340,7 +370,7 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='mentor-sign-up-process'><a href="#mentor-sign-up-process">6. Mentor sign up process</a></h2>
+<h2 id='mentor-sign-up-process'><a href="#mentor-sign-up-process">7. Mentor sign up process</a></h2>
 
 <p>
 Mentors must submit their project descriptions through the Outreachy website. Co-mentors can sign up once the project has been submitted. Coordinators will approve the projects and any co-mentors.
@@ -355,7 +385,7 @@ Mentors will be granted read access to applications for their project and will b
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='estimated-number-of-interns'><a href="#estimated-number-of-interns">7. Estimated number of interns</a></h2>
+<h2 id='estimated-number-of-interns'><a href="#estimated-number-of-interns">8. Estimated number of interns</a></h2>
 
 <p>
 On the <a href="{% url 'project-selection' %}">project list</a>, each community has an estimate of the number of interns it expects to accept.
@@ -407,14 +437,14 @@ Some times project mentors <a href="#contribution-evaluation">evaluated the cont
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='internship'><a href='#internship'>8. Internship</a></h2>
+<h2 id='internship'><a href='#internship'>9. Internship</a></h2>
 
 <p>Mentors and coordinators are encouraged to read the <a href='{% url 'docs-internship' %}'>Internship Guide</a>. The Internship Guide includes mentor duties and expectations during the internship. Mentors should familiarize themselves with the internship chat and blogging schedules.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='faq'><a href='#faq'>9. FAQ</a></h2>
+<h2 id='faq'><a href='#faq'>10. FAQ</a></h2>
 
 <h2 id='stipend-details'><a href='#stipend-details'>Internship stipend details</a></h2>
 
